# adventofcode

./: .gitignore  Cargo.toml  flake.nix
2025/day1/: Cargo.toml
2025/day1/src/: main.rs
2025/day1part1/: Cargo.toml
2025/day1part1/src/: main.rs
2025/day1part1/src/snapshots/: day1part1__test__parses_example.snap
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day13/src/snapshots/: day13__test__can_parse_example.snap
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: disk_block.rs  main.rs
lib/: Cargo.toml
lib/src/: diophantine.rs  gcd.rs  grid.rs  lib.rs  parsers.rs
