[workspace]
resolver = "2"

members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5", "day6", "day7", "day8", "day9",
    "lib"
]

[workspace.dependencies]
itertools = { version = "0.13.0" }
winnow = { version = "0.6.20" }
anyhow = { version = "1.0.94" }
rstest = { version = "0.23.0" }
rayon = { version = "1.10.0" }
