[package]
name = "day1part1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
itertools = { version = "0.14.0" }
winnow = { version = "0.7.14" }
anyhow = { version = "1.0.100" }
rstest = { version = "0.26.1" }
rayon = { version = "1.11.0" }
insta = { version = "1.44.3", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
